vpc.tf
# network.tf

resource "aws_vpc" "nimble-vpc" {
  cidr_block = "172.16.0.0/16"
}

# Fetch AZs in the current region
data "aws_availability_zones" "available" {
}


# Create var.az_count private subnets, each in a different AZ
resource "aws_subnet" "private" {
  count             = var.az_count
  cidr_block        = cidrsubnet(aws_vpc.nimble-vpc.cidr_block, 8, count.index)
  availability_zone = data.aws_availability_zones.available.names[count.index]
  vpc_id            = aws_vpc.nimble-vpc.id
}

# Create var.az_count public subnets, each in a different AZ
resource "aws_subnet" "public" {
  count                   = var.az_count
  cidr_block              = cidrsubnet(aws_vpc.nimble-vpc.cidr_block, 8, var.az_count + count.index)
  availability_zone       = data.aws_availability_zones.available.names[count.index]
  vpc_id                  = aws_vpc.nimble-vpc.id
  map_public_ip_on_launch = true
}

# Internet Gateway for the public subnet
resource "aws_internet_gateway" "nimble-igw" {
  vpc_id = aws_vpc.nimble-vpc.id
}

# Route the public subnet traffic through the IGW
resource "aws_route" "internet_access" {
  route_table_id         = aws_vpc.nimble-vpc.main_route_table_id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.nimble-igw.id
}

# Create a NAT gateway with an Elastic IP for each private subnet to get internet connectivity
resource "aws_eip" "nimble-eip" {
  count      = var.az_count
  vpc        = true
  depends_on = [aws_internet_gateway.nimble-igw]
}

resource "aws_nat_gateway" "nimble-natgw" {
  count         = var.az_count
  subnet_id     = element(aws_subnet.public.*.id, count.index)
  allocation_id = element(aws_eip.nimble-eip.*.id, count.index)
}

# Create a new route table for the private subnets, make it route non-local traffic through the NAT gateway to the internet
resource "aws_route_table" "private" {
  count  = var.az_count
  vpc_id = aws_vpc.nimble-vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = element(aws_nat_gateway.nimble-natgw.*.id, count.index)
  }
}

# Explicitly associate the newly created route tables to the private subnets (so they don't default to the main route table)
resource "aws_route_table_association" "private" {
  count          = var.az_count
  subnet_id      = element(aws_subnet.private.*.id, count.index)
  route_table_id = element(aws_route_table.private.*.id, count.index)
}
# module "vpc" {
#   source         = "terraform-aws-modules/vpc/aws"
#   #version        = "2.38.0"
#   name           = "test_ecs_provisioning"
#   cidr           = "10.0.0.0/16"
#   azs            = ["us-east-1a", "us-east-1b", "us-east-1c"]
#   public_subnets = ["10.0.1.0/24", "10.0.2.0/24", "10.0.3.0/24"]
#   tags = {
#     "env"       = "dev"
#     "createdBy" = "eyal"
#   }

# }

# data "aws_vpc" "main" {
#   id = module.vpc.vpc_id
# }
